--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="getting_started">Getting Started</string>
     <string name="back">Back</string>
     <string name="save">Save</string>
-    <string name="page_title">Page Title</string>
+    <string name="page_title">Title</string>
     <string name="skip">Skip</string>
     <string name="tuto_1_title_1">Manage your notes easily</string>
     <string name="tuto_1_title_2">A completely easy way to manage and customize your notes.</string>
@@ -62,4 +62,5 @@
     <string name="tuto_2_title_2">Most beautiful note taking application.</string>
     <string name="tuto_3_title_1">Create cards and easy styling</string>
     <string name="tuto_3_title_2">Making your content legible has never been easier.</string>
+    <string name="content">Content</string>
 </resources>
